# poc-beaver-bridge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_api.py  test_curl.sh
app/: audit.py  config.py  limiter.py  main.py  metrics.py  pii.py  status_cache.py
app/mcp/: client.py  pool.py
app/middleware/: auth.py
app/registry/: loader.py  models.py
app/routers/: audit.py  mcps.py  metrics.py
app/schemas/: responses.py
config/: mcp_servers.yaml
frontend/: .env.local  index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: BeaverLogo.tsx  Sidebar.tsx
frontend/src/hooks/: useData.ts
frontend/src/pages/: Dashboard.tsx  MCPRegistry.tsx  Observability.tsx  Playground.tsx  ToolExplorer.tsx
local_mcps/: calculator.py  text_tools.py  time_tools.py
tests/: conftest.py  test_auth.py  test_health.py  test_mcps.py
